--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/MAPReiff/cs546-group-44#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "mongodb": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
