--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/MAPReiff/cs546-group-44#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.4",
     "mongodb": "^5.1.0"
   },
   "devDependencies": {
