--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
-    "mongodb": "^5.1.0"
+    "mongodb": "^5.1.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
