--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/MAPReiff/cs546-group-44#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "express-session": "^1.17.3",
     "mongodb": "^5.1.0",
     "validator": "^13.9.0"
   },
