--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/MAPReiff/cs546-group-44#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
     "express-session": "^1.17.3",
     "mongodb": "^5.1.0",
+    "password-validator": "^5.3.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
